# Quantum-Internet-Network-Simulator

./: .gitignore  AT2.ipynb  README.md  benchmark.py  config.py  generate_fig2_data.py  gui.py  main.py  pyproject.toml  test_fits.py  test_fix3.py  test_speed.py
Datasets/: filename  output.csv  output_200.csv  output_600.csv  results.csv  results2.xlsx  results_desarrollo.csv
_archive/: gui_legacy.py
logic/: simulation.py
notebooks/: 01_degree_distribution.ipynb  02_evolution_analysis.ipynb  03_results_analysis.ipynb
qcn/engine/: config.py  math_util.py  network.py  node.py  results_store.py  simulation.py
qcn/interfaces/gui/: main.py  main_window.py
qcn/interfaces/gui/panels/: dashboard_panel.py
qcn/utils/: community_detector.py  csv_util.py  images_util.py  window_util.py
tests/: test_engine.py
ui/: main_window.py
ui/panels/: dashboard_panel.py
utilities/: community_detector.py  csv_util.py  images_util.py  math_util.py  network.py  node.py  window_util.py
workflows/: ci.yml
