[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qcn"
version = "0.1.0"
description = "Quantum Communication Networks simulation engine"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "networkx",
  "scipy",
  "matplotlib",
  "pandas",
  "scikit-learn",
  "customtkinter",
  "pillow",
]

[project.optional-dependencies]
dev = ["pytest", "jupyter", "ipykernel"]

[tool.setuptools.packages.find]
where = ["."]
include = ["qcn*"]

[project.scripts]
qcn-gui = "qcn.interfaces.gui.main:main"
